WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193217
Crash in SWServer::Connection::resolveRegistrationReadyRequests
https://bugs.webkit.org/show_bug.cgi?id=193217
Summary
Crash in SWServer::Connection::resolveRegistrationReadyRequests
youenn fablet
Reported
2019-01-07 15:10:24 PST
Thread 0 Crashed: 0 WebCore 0x00000001c5309048 WebCore::SWServer::Connection::resolveRegistrationReadyRequests(WebCore::SWServerRegistration&) + 40 (Vector.h:337) 1 WebCore 0x00000001c530b104 WebCore::SWServerRegistration::activate() + 208 (SWServer.cpp:823) 2 WebCore 0x00000001c530b104 WebCore::SWServerRegistration::activate() + 208 (SWServer.cpp:823) 3 WebCore 0x00000001c5308b80 WebCore::SWServer::unregisterServiceWorkerClient(WebCore::ClientOrigin const&, WebCore::ServiceWorkerClientIdentifier) + 1576 (SWServer.cpp:810) 4 WebKit 0x00000001cb13927c WebKit::WebSWServerConnection::~WebSWServerConnection() + 308 (WebSWServerConnection.cpp:76) 5 WebKit 0x00000001cb1393d8 WebKit::WebSWServerConnection::~WebSWServerConnection() + 12 (WebSWServerConnection.cpp:73) 6 WebCore 0x00000001c5300084 WebCore::SWServer::~SWServer() + 92 (memory:2285) 7 WebKit 0x00000001cadcfd50 WTF::KeyValuePairHashTraits<WTF::HashTraits<PAL::SessionID>, WTF::HashTraits<std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > > >::customDeleteBucket(WTF::KeyValuePair<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > >&) + 32 (memory:2285) 8 WebKit 0x00000001cadcfcdc WTF::HashTable<PAL::SessionID, WTF::KeyValuePair<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > > >, WTF::SessionIDHash, WTF::HashMap<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> >, WTF::SessionIDHash, WTF::HashTraits<PAL::SessionID>, WTF::HashTraits<std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > > >::KeyValuePairTraits, WTF::HashTraits<PAL::SessionID> >::remove(WTF::KeyValuePair<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > >*) + 24 (HashTraits.h:253) 9 WebKit 0x00000001cadba594 WTF::HashMap<PAL::SessionID, std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> >, WTF::SessionIDHash, WTF::HashTraits<PAL::SessionID>, WTF::HashTraits<std::__1::unique_ptr<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer> > > >::remove(PAL::SessionID const&) + 56 (HashTable.h:1045) 10 WebKit 0x00000001cadba4f0 WebKit::NetworkProcess::destroySession(PAL::SessionID) + 64 (NetworkProcess.cpp:463) 11 WebKit 0x00000001cad8be40 WebKit::NetworkProcess::didReceiveNetworkProcessMessage(IPC::Connection&, IPC::Decoder&) + 2808 (HandleMessage.h:41) 12 WebKit 0x00000001cad72e50 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 148 (Connection.cpp:978)
Attachments
Patch
(1.75 KB, patch)
2019-01-07 15:14 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.76 KB, patch)
2019-01-07 16:01 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-01-07 15:14:57 PST
Created
attachment 358539
[details]
Patch
youenn fablet
Comment 2
2019-01-07 15:27:15 PST
<
rdar://problem/45489324
>
Chris Dumez
Comment 3
2019-01-07 15:37:42 PST
Comment on
attachment 358539
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358539&action=review
> Source/WebCore/ChangeLog:10 > + This method is iterating on the connectionds HashMap which is being cleared.
typo: connectionds
youenn fablet
Comment 4
2019-01-07 16:01:31 PST
Created
attachment 358549
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2019-01-07 16:39:36 PST
Comment on
attachment 358549
[details]
Patch for landing Clearing flags on attachment: 358549 Committed
r239715
: <
https://trac.webkit.org/changeset/239715
>
WebKit Commit Bot
Comment 6
2019-01-07 16:39:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug