Cherry-pick r239715. rdar://problem/47158638

Crash in SWServer::Connection::resolveRegistrationReadyRequests
    https://bugs.webkit.org/show_bug.cgi?id=193217

    Reviewed by Chris Dumez.

    As can be seen from the traces, SWServer might clear its connections HashMap in its destructor.
    This might then trigger calling SWServer::resolveRegistrationReadyRequests.
    This method is iterating on the connections HashMap which is being cleared.
    To remove this problem, move the HashMap in a temporary variable and clear the temporary variable.

    * workers/service/server/SWServer.cpp:
    (WebCore::SWServer::~SWServer):

    Canonical link: https://commits.webkit.org/207729@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239715 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.14@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@239802 268f45cc-cd09-0410-ab3c-d52691b4dbfc